Refactoring to use DTOs as interface (#40)
* feat: adds negotiationId to request dto

* refactor: refactored NegotiationService to return DTOs instead of Entity

* refactor: moves request dtos to RequestService and splits test into integration and unit

* refactor: changes AccessCriteriaSetService to use DTOs

* refactor: moves mappers

* refactor: changes ProjectService to use DTOs

* refactor: changes person service to use dtos

* refactor: moves QueryV2Mapper to configuration

* refactor: changes test data to isolate negotiations and requests tests

* refactor: autowires services' interfaces instead of implementation

* feat: adds documentation to services

---------

Co-authored-by: Radovan Tomášik <tomasik@mail.muni.cz>